--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity
             android:name=".RideCreationActivity"
             android:label="@string/title_activity_ridecreation"
+            android:windowSoftInputMode="adjustResize"
             android:parentActivityName=".EventRidesActivity" />
 
     </application>
