Add ride delete and edit buttons; Add main menu button to change current account (temp); Fix Ride.eventId

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -41,9 +42,9 @@
         <activity
             android:name=".RideCreationActivity"
             android:label="@string/title_activity_ridecreation"
-            android:windowSoftInputMode="adjustResize"
             android:noHistory="true"
-            android:parentActivityName=".EventRidesActivity" />
+            android:parentActivityName=".EventRidesActivity"
+            android:windowSoftInputMode="adjustResize" />
 
     </application>
 
