--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,13 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -41,7 +48,6 @@
         <activity
             android:name=".RideCreationActivity"
             android:label="@string/title_activity_ridecreation"
-            android:noHistory="true"
             android:parentActivityName=".EventRidesActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".FacebookLoginActivity">
@@ -59,9 +65,8 @@
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:noHistory="true"
-            android:label="@string/app_name" />
-
+            android:label="@string/app_name"
+            android:noHistory="true" />
 
         <!-- If you're sharing links, images or video via the Facebook for Android app, you also need to declare the FacebookContentProvider in the manifest. -->
         <!-- Append your app id to the end of the authorities value. For example if your Facebook app id is 1533993016893247 -->
@@ -74,6 +79,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/SECRET_GOOGLE_API_KEY" />
 
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
