--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,8 @@
                 android:label="@string/title_activity_maps"
                 android:theme="@style/AppTheme.NoActionBar"/>
         <activity
-                android:name=".JoinRideActivity">
+                android:name=".JoinRideActivity"
+                android:label="@string/title_activity_joinride">
         </activity>
     </application>
 
