Fix launcher bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,12 +40,13 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".WelcomeActivity"
-                android:label="Welcome"
+                android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <action android:name="android.intent.action.VIEW" />
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".RidePageActivity"
@@ -57,11 +58,6 @@
             android:parentActivityName=".EventRidesActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".FacebookLoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
