--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,20 +26,24 @@
             android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".EventRidesActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_eventrides"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SettingsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
                 android:name=".WelcomeActivity"
+                android:screenOrientation="portrait"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -50,15 +54,19 @@
         </activity>
         <activity
             android:name=".RidePageActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_ridepage"
             android:parentActivityName=".EventRidesActivity" />
         <activity
             android:name=".RideCreationActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_ridecreation"
             android:parentActivityName=".EventRidesActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".FacebookLoginActivity">
-        </activity>
+        <activity
+                android:name=".FacebookLoginActivity"
+                android:screenOrientation="portrait"
+        />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -66,6 +74,7 @@
 
         <activity
             android:name="com.facebook.FacebookActivity"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:noHistory="true" />
